set up firebase

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emoji-mart/react": "^1.0.1",
     "@heroicons/react": "^2.0.10",
     "emoji-mart": "^5.2.1",
+    "firebase": "^9.9.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
