--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "emoji-mart": "^5.2.1",
     "firebase": "^9.9.4",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar-hide": "^1.1.7"
