added headlessui and creating modal

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emoji-mart/data": "^1.0.5",
     "@emoji-mart/react": "^1.0.1",
+    "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "emoji-mart": "^5.2.1",
     "firebase": "^9.9.4",
